--- a/color.css
+++ b/color.css
@@ -2,10 +2,10 @@
     --card-color: #fff;
     --projectcard-color: #fbfbfb;
     --darklabel-color: #fff;
-    --lightlabel-color: #6c80a4;
-    --font-color: #6c80a4;
+    --lightlabel-color: #505e78;
+    --font-color: #505e78;
     --cardfont-color: #5b5b5b;
-    --smallcardfont-color: #6c80a4;
+    --smallcardfont-color: #505e78;
     --bg-color: #f1f3f5;
     
     --email-color: #e43d28;
