--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -34,6 +34,15 @@
     opacity: 0;
     width: 100%;
 
+    @media (max-width: 1024px) {
+        height: auto;
+        padding: 6rem 3rem;
+    }
+
+    @media (max-width: 480px) {
+        padding: 4rem 2rem;
+        // border-radius: 20px;
+    }
 
     .hero-title {
 
@@ -48,6 +57,21 @@
             font-family: $grotesk;
             font-weight: 600;
             // overflow: hidden;
+
+            @media (max-width: 1366px) {
+                font-size: 7rem;
+                line-height: 5.5rem;
+            }
+
+            @media (max-width: 1024px) {
+                font-size: 5rem;
+                line-height: 4.5rem;
+            }
+
+            @media (max-width: 480px) {
+                font-size: 2.75rem;
+                line-height: 2rem;
+            }
 
             .my-name {}
 
@@ -65,6 +89,31 @@
                 text-transform: none;
                 vertical-align: 15px;
                 font-weight: 500;
+
+                @media (max-width: 1366px) {
+                    border-radius: 20px;
+                    font-size: 4.5rem;
+                    height: 6rem;
+                    letter-spacing: -5.5px;
+                    line-height: 6.3rem;
+                }
+
+                @media (max-width: 1024px) {
+                    border-radius: 15px;
+                    font-size: 3rem;
+                    height: 5rem;
+                    line-height: 5.3rem;
+                    vertical-align: 5px;
+                }
+
+                @media (max-width: 480px) {
+                    border-radius: 8px;
+                    font-size: 1.75rem;
+                    height: 2.75rem;
+                    letter-spacing: -3.5px;
+                    line-height: 2.75rem;
+                    padding-right: 5px;
+                }
 
                 .curly-brace {
                     color: #03ACF0;
@@ -109,7 +158,7 @@
             color: $forest-green;
             overflow: hidden;
             font-kerning: none;
-            font-size: 36px;
+            font-size: clamp(1.25rem, 0.8979rem + 1.1268vw, 2.25rem);
             line-height: 40px;
             font-weight: 400;
             max-width: 1100px;
@@ -119,6 +168,26 @@
             // bottom: 50px;
             // left: 50px;
             // text-align: right;
+
+            @media (max-width: 1366px) {
+                font-size: 1.4rem;
+                line-height: 26px;
+                max-width: 900px;
+            }
+
+            @media (max-width: 1024px) {
+                font-size: 1rem;
+                line-height: 20px;
+                max-width: 600px;
+                margin-top: 30px;
+            }
+
+            @media (max-width: 480px) {
+                line-height: 14px;
+                font-size: 12px;
+                max-width: 400px;
+                margin-top: 15px;
+            }
 
             span,
             b {
@@ -295,9 +364,13 @@
             padding: 0 40px;
 
             h3 {
-                font-size: 14rem;
+                font-size: clamp(8rem, 5.8873rem + 6.7606vw, 14rem);
                 font-family: $grotesk;
                 text-transform: uppercase;
+
+                @media (max-width: 1024px) {
+                    font-size: clamp(8rem, 5.8873rem + 6.7606vw, 8rem);
+                }
             }
 
             &.scrolling-dots {
@@ -324,6 +397,14 @@
     .introduction-wrapper {
         padding: 10rem 4rem;
 
+        @media (max-width: 1024px) {
+            padding: 10rem 2rem;
+        }
+
+        @media (max-width: 480px) {
+            padding: 4rem 1rem;
+        }
+
         .row {
             // display: flex;
             // align-items: center;
@@ -334,6 +415,14 @@
         .flex-col {
             &:nth-child(1) {
                 width: 60%;
+
+                @media (max-width: 1680px) {
+                    width: 80%;
+                }
+
+                @media (max-width: 480px) {
+                    width: 100%;
+                }
             }
 
             &:nth-child(2) {
@@ -344,6 +433,11 @@
                 align-items: start;
                 justify-content: space-between;
                 margin-top: 10rem;
+
+                @media (max-width: 480px) {
+                    margin-top: 5rem;
+                    flex-direction: column;
+                }
             }
 
             h2 {
@@ -351,10 +445,55 @@
                 font-weight: 600;
                 line-height: 1;
                 margin-bottom: 2rem;
+
+                @media (max-width: 1680px) {
+                    font-size: clamp(2.5rem, 7vw, 5.25rem);
+                }
+
+                @media (max-width: 1440px) {
+                    font-size: clamp(2.5rem, 7vw, 4.25rem);
+                }
+
+                @media (max-width: 1024px) {
+                    font-size: clamp(2.5rem, 7vw, 3.25rem);
+                }
             }
 
             h4 {
-                font-size: 3rem;
+                font-size: clamp(2rem, 1.6479rem + 1.1268vw, 3rem);
+
+                @media (max-width: 1024px) {
+                    font-size: clamp(1rem, 1.6479rem + 1.1268vw, 1.75rem);
+                }
+
+                @media (max-width: 1024px) {
+                    sup {
+                        font-size: 10px !important;
+                    }
+                }
+
+                a {
+                    border-radius: 10px;
+                    padding: 5px;
+                    transition: all 0.3s ease-in-out;
+                    &:hover {
+                        color: $lemonade;
+                        background-color: $forest-green;
+                        transition: all 0.3s ease-in-out;
+                    }
+                }
+
+                .line {
+                    .word {
+                        // text-decoration: underline;
+                    }
+
+                    a {
+                        .word {
+                            text-decoration: underline;
+                        }
+                    }
+                }
             }
 
             .skills-box {
@@ -365,10 +504,27 @@
                 flex-direction: column;
                 gap: 0px 40px;
 
+                @media (max-width: 1024px) {
+                    height: 145px;
+                }
+
+                @media (max-width: 480px) {
+                    flex-direction: column;
+                    gap: 0 20px;
+                    height: 300px;
+                    width: 100%;
+                }
+
                 span {
                     font-size: 1.4rem;
                     display: block;
                     text-align: right;
+
+                    @media (max-width: 1024px) {
+                        font-size: 1rem;
+                        line-height: 20px;
+                        text-align: left;
+                    }
                 }
             }
 
@@ -380,11 +536,31 @@
         // height: 100vh;
         position: relative;
 
+        @media (max-width: 1024px) {
+            padding: 0 2rem 10rem;
+        }
+
+        @media (max-width: 480px) {
+            padding: 0 1rem 4rem;
+        }
+
         h2 {
             font-size: clamp(2.5rem, 7vw, 6.25rem);
             line-height: 1;
             margin-bottom: 2rem;
             font-weight: 600;
+
+            @media (max-width: 1680px) {
+                font-size: clamp(2.5rem, 7vw, 5.25rem);
+            }
+
+            @media (max-width: 1440px) {
+                font-size: clamp(2.5rem, 7vw, 4.25rem);
+            }
+
+            @media (max-width: 1024px) {
+                font-size: clamp(2.5rem, 7vw, 3.25rem);
+            }
 
             span {
                 color: rgba(20, 52, 43, 0.5);
@@ -393,20 +569,23 @@
 
         .instructions-text {
             color: #000;
-            font-size: 78px;
+            font-size: clamp(1.25rem, -0.0264rem + 4.0845vw, 4.875rem);
             font-weight: 700;
             left: 0%;
             margin: 0 auto;
             opacity: .05;
             position: absolute;
             text-align: center;
-            top: 50%;
+            top: 0;
             width: 50%;
-            transform: translateY(-50%);
 
-            // &.pinned {
-            //     position: sticky;
-            // }
+            @media (max-width: 1024px) {
+                width: 48%;
+            }
+
+            @media (max-width: 480px) {
+                display: none;
+            }
         }
 
         .work-item {
@@ -477,9 +656,13 @@
             position: relative;
             padding-top: 15%;
 
-
+            @media (max-width: 480px) {
+                padding-top: 0;
+            }
 
             .card-stack-item {
+
+
 
                 &.celcom {
                     background-color: #001871;
@@ -651,6 +834,20 @@
                 // box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
                 transition: all 0.3s ease-in-out;
 
+                @media (max-width: 1024px) {
+                    padding: 1rem;
+                }
+
+                @media (max-width: 480px) {
+                    width: 100%;
+                    transform: translateX(0);
+                    margin-top: 10px;
+                    
+                    &:not(:first-child) {
+                        margin-top: 15px;
+                    }
+                }
+
                 &.active {
                     transform: translateX(-3%);
                     transition: all 0.3s ease-in-out;
@@ -669,9 +866,15 @@
                     display: flex;
                     gap: 1.5rem;
 
+                    @media (max-width: 1024px) {
+                        gap: 0.5rem;
+                    }
+
                     .work-thumbnail {
-                        width: 250px;
-                        height: 250px;
+                        // width: 250px;
+                        // height: 250px;
+
+                        width: 50%;
 
                         img {
                             border-radius: 20px;
@@ -682,12 +885,26 @@
                     }
 
                     .work-details {
+                        width: 50%;
+
                         .work-title-desc {
                             h3 {
-                                font-size: clamp(1.75rem, 4.2vw, 3.75rem);
+                                font-size: clamp(1.75rem, -0.0264rem + 4.0845vw, 3.75rem);
                                 font-weight: 600;
                                 margin-bottom: 0;
                                 line-height: 1;
+
+                                @media (max-width: 1680px) {
+                                    font-size: clamp(1.75rem, -0.0264rem + 4.0845vw, 2.75rem);
+                                }
+
+                                @media (max-width: 1440px) {
+                                    font-size: clamp(1.75rem, -0.0264rem + 4.0845vw, 2rem);
+                                }
+
+                                @media (max-width: 1024px) {
+                                    font-size: clamp(1.75rem, -0.0264rem + 4.0845vw, 1rem);
+                                }
                             }
 
                             p {
@@ -696,6 +913,14 @@
                                 text-decoration-thickness: 2px;
                                 text-underline-offset: 5px;
                                 margin-bottom: 10px;
+
+                                @media (max-width: 1440px) {
+                                    font-size: 17px;
+                                }
+
+                                @media (max-width: 1024px) {
+                                    font-size: 15px;
+                                }
                             }
                         }
 
@@ -717,6 +942,17 @@
                                     cursor: pointer;
                                     margin-bottom: 10px;
                                     transition: all 0.3s ease-in-out;
+
+                                    @media (max-width: 1024px) {
+                                        font-size: 14px;
+                                        margin-bottom: 3px;
+                                        padding: 1px 10px 1px 5px;
+                                    }
+
+                                    @media (max-width: 1024px) {
+                                        font-size: 10px;
+                                        margin-bottom: 3px;
+                                    }
 
                                     i {
                                         font-size: 5px;
@@ -762,17 +998,18 @@
         .area-of-expertise-title {
             color: $forest-green;
             font-weight: 700;
-            font-size: clamp(2.5rem,7vw,6.25rem);
+            font-size: clamp(2.5rem, 7vw, 6.25rem);
             text-align: center;
 
             span {
-                color: rgba(20,52,43,.5);
+                color: rgba(20, 52, 43, .5);
             }
         }
+
         .additional-section-wrapper {
             background-color: $forest-green;
             border-radius: 50px;
-            
+
             .area-of-expertise-wrapper {
                 // padding: 3rem;
                 height: 500px;
@@ -816,11 +1053,19 @@
                     opacity: 0.5;
                     font-weight: 700;
                     margin: 0;
+
+                    @media (max-width: 480px) {
+                        font-size: 16px;
+                    }
                 }
 
                 h2 {
                     font-size: 90px;
                     font-weight: 500;
+
+                    @media (max-width: 480px) {
+                        font-size: clamp(1.75rem,-.2905rem + 4.9296vw,5.625rem);
+                    }
                 }
             }
 
@@ -868,6 +1113,10 @@
         width: 100%;
         padding: 8rem 4rem 1rem;
 
+        @media (max-width: 480px) {
+            padding: 4rem 2rem 1rem;
+        }
+
         .footer-wrapper {
             display: flex;
             flex-direction: column;
@@ -888,15 +1137,39 @@
                 p {
                     font-size: 20px;
                     opacity: 0.5;
-                    font-weight: 600;
+                    font-weight: 700;
                     margin: 0;
-                    color: #fff;
+
+                    @media (max-width: 480px) {
+                        font-size: 16px;
+                    }
                 }
 
                 h2 {
                     font-size: 90px;
                     font-weight: 500;
-                    color: $beige;
+
+                    @media (max-width: 480px) {
+                        font-size: clamp(1.75rem,-.2905rem + 4.9296vw,5.625rem);
+                    }
+                }
+
+                .contact-number {
+                    font-weight: 500;
+                    font-size: 1.75rem;
+                    opacity: 0.5;
+                    color: #fff;
+                    transition: all 0.3s ease-in-out;
+
+                    &:hover {
+                        opacity: 1;
+                        color: $lemonade;
+                        transition: all 0.3s ease-in-out;
+                    }
+
+                    @media (max-width: 480px) {
+                        font-size: 1.25rem;
+                    }
                 }
 
                 .footer-cta-wrapper {
@@ -906,12 +1179,20 @@
                     width: 50%;
                     margin: 2rem auto 0;
 
+                    @media (max-width: 480px) {
+                        width: auto;
+                    }
+
                     .footer-cta {
                         color: #fff;
                         opacity: 0.5;
                         font-size: 24px;
                         font-weight: 400;
                         transition: all 0.3s ease-in-out;
+
+                        @media (max-width: 480px) {
+                            font-size: 16px;
+                        }
 
                         i {
                             font-size: 15px;
