--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -662,8 +662,29 @@
 
             .card-stack-item {
 
+                width: 50%;
+                padding: 1.5rem;
+                margin-top: -15%;
+                position: relative;
+                border-radius: 30px;
+                cursor: pointer;
+                transform: translateX(100%);
+                // box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
+                transition: all 0.3s ease-in-out;
 
+                @media (max-width: 1024px) {
+                    padding: 1rem;
+                }
 
+                @media (max-width: 480px) {
+                    width: 100%;
+                    transform: translateX(0);
+                    margin-top: 10px;
+                    
+                    &:not(:first-child) {
+                        margin-top: 15px;
+                    }
+                }
                 &.celcom {
                     background-color: #001871;
 
@@ -821,30 +842,6 @@
                             }
                         }
 
-                    }
-                }
-
-                width: 50%;
-                padding: 1.5rem;
-                margin-top: -15%;
-                position: relative;
-                border-radius: 30px;
-                cursor: pointer;
-                transform: translateX(100%);
-                // box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-                transition: all 0.3s ease-in-out;
-
-                @media (max-width: 1024px) {
-                    padding: 1rem;
-                }
-
-                @media (max-width: 480px) {
-                    width: 100%;
-                    transform: translateX(0);
-                    margin-top: 10px;
-                    
-                    &:not(:first-child) {
-                        margin-top: 15px;
                     }
                 }
 
@@ -1153,6 +1150,7 @@
 
                     @media (max-width: 480px) {
                         font-size: clamp(1.75rem,-.2905rem + 4.9296vw,5.625rem);
+                        line-height: 36px;
                     }
                 }
 
