--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -363,13 +363,17 @@
             white-space: nowrap;
             padding: 0 40px;
 
+            @media (max-width: 480px) {
+                padding: 0 20px;
+            }
+
             h3 {
                 font-size: clamp(8rem, 5.8873rem + 6.7606vw, 14rem);
                 font-family: $grotesk;
                 text-transform: uppercase;
 
                 @media (max-width: 1024px) {
-                    font-size: clamp(8rem, 5.8873rem + 6.7606vw, 8rem);
+                    font-size: clamp(4rem,5.8873rem + 6.7606vw,5rem);
                 }
             }
 
@@ -378,6 +382,12 @@
                 align-items: center;
                 font-size: 2rem;
                 color: $lemonade;
+
+                @media (max-width: 480px) {
+                    i {
+                        font-size: 1.25rem;
+                    }
+                }
             }
         }
     }
@@ -497,7 +507,7 @@
             }
 
             .skills-box {
-                height: 250px;
+                height: 280px;
                 width: auto;
                 flex-wrap: wrap;
                 display: flex;
@@ -524,6 +534,10 @@
                         font-size: 1rem;
                         line-height: 20px;
                         text-align: left;
+                    }
+
+                    @media (max-width: 480px) {
+                        font-size: 14px;
                     }
                 }
             }
