--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -33,6 +33,7 @@
     border-bottom-right-radius: 0;
     opacity: 0;
     width: 100%;
+    white-space: nowrap;
 
     @media (max-width: 1024px) {
         height: auto;
