--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -33,7 +33,6 @@
     border-bottom-right-radius: 0;
     opacity: 0;
     width: 100%;
-    white-space: nowrap;
 
     @media (max-width: 1024px) {
         height: auto;
@@ -46,6 +45,7 @@
     }
 
     .hero-title {
+        width: 100%;
 
         .hide {
             overflow: hidden;
